[project]
name = "pathfinder"
version = "0.1.0"
description = "Console file finder by name and content."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
pathfinder = "pathfinder.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
fast = ["pyahocorasick>=2.0.0"]

